--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -2,48 +2,48 @@
   "NAVBAR": {
     "SMART_ECOSYSTEM": "Smart Ecosystem",
     "SMART": "Smart",
-    "SMART_ECOSYSTEM_ITEMS":[
+    "SMART_ECOSYSTEM_ITEMS": [
       {
-        "HREF":"",
-        "TITLE":"<strong>Smart</strong><br>Governance",
+        "HREF": "",
+        "TITLE": "<strong>Smart</strong><br>Governance",
         "TITLE_NAV": "Smart Governance",
-        "SUBTITLE":"Digital Government and Transparency."
+        "SUBTITLE": "Digital Government and Transparency."
       },
       {
-        "HREF":"",
-        "TITLE":"<strong>Smart</strong><br>Economy",
+        "HREF": "",
+        "TITLE": "<strong>Smart</strong><br>Economy",
         "TITLE_NAV": "Smart Economy",
-        "SUBTITLE":"Financing and Business Models."
+        "SUBTITLE": "Financing and Business Models."
       },
       {
-        "HREF":"",
-        "TITLE":"<strong>Smart</strong><br>Mobility and<br>Infrastructure",
+        "HREF": "",
+        "TITLE": "<strong>Smart</strong><br>Mobility and<br>Infrastructure",
         "TITLE_NAV": "Smart Mobility and Infrastructure",
-        "SUBTITLE":"Connected Mobility and Infrastructure."
+        "SUBTITLE": "Connected Mobility and Infrastructure."
       },
       {
-        "HREF":"",
-        "TITLE":"<strong>Smart</strong><br>Environment",
+        "HREF": "",
+        "TITLE": "<strong>Smart</strong><br>Environment",
         "TITLE_NAV": "Smart Environment",
-        "SUBTITLE":"Sustainability and ESG Services."
+        "SUBTITLE": "Sustainability and ESG Services."
       },
       {
-        "HREF":"",
-        "TITLE":"<strong>Smart</strong><br>Habitat and<br>Services",
+        "HREF": "",
+        "TITLE": "<strong>Smart</strong><br>Habitat and<br>Services",
         "TITLE_NAV": "Smart Habitat and Services",
-        "SUBTITLE":"Security and Quality of Life."
+        "SUBTITLE": "Security and Quality of Life."
       },
       {
-        "HREF":"",
-        "TITLE":"<strong>Smart</strong><br>Society",
+        "HREF": "",
+        "TITLE": "<strong>Smart</strong><br>Society",
         "TITLE_NAV": "Smart Society",
-        "SUBTITLE":"Society and Digital Inclusion."
+        "SUBTITLE": "Society and Digital Inclusion."
       }
     ],
     "ABOUT_US": "About Us",
     "CONTACT": "Contact",
-    "BLOG":"Blog",
-    "INFORMATION":"Receive more information"
+    "BLOG": "Blog",
+    "INFORMATION": "Receive more information"
   },
   "HERO": {
     "CENTER_SUBTITLE": "Implementation",
@@ -53,28 +53,37 @@
     "FOOTER_LEFT_BUTTON": "cities and communities",
     "FOOTER_RIGHT_TEXT": "Follow us on"
   },
-    "NETWORKS":[
+  "NETWORKS": [
     {
-      "IMG":"/icons/networks/facebook.png",
-      "TITLE":"FACEBOOK",
-      "HREF":""
+      "IMG": "/icons/networks/facebook.png",
+      "TITLE": "FACEBOOK",
+      "HREF": ""
     },
     {
-      "IMG":"/icons/networks/twitter.png",
-      "TITLE":"TWITTER",
-      "HREF":""
+      "IMG": "/icons/networks/twitter.png",
+      "TITLE": "TWITTER",
+      "HREF": ""
     },
     {
-      "IMG":"/icons/networks/instagram.png",
-      "TITLE":"INSTAGRAM",
-      "HREF":""
+      "IMG": "/icons/networks/instagram.png",
+      "TITLE": "INSTAGRAM",
+      "HREF": ""
     },
     {
-      "IMG":"/icons/networks/linkedin.png",
-      "TITLE":"LINKEDIN",
-      "HREF":""
+      "IMG": "/icons/networks/linkedin.png",
+      "TITLE": "LINKEDIN",
+      "HREF": ""
     }
   ],
+  "ABOUT": {
+    "LABEL": "Smart City.",
+    "TITLE1": "Interaction and sustainable urban transformation",
+    "TEXT1": "A holistic system where human and social capital interact, using ICT-based solutions.",
+    "TITLE2": "The purpose of a Smart City is to achieve efficient management",
+    "TEXT2": "meeting the needs of the city and its citizens.",
+    "TITLE3": "Consulting and advisory in smart city management",
+    "TEXT3": "National and international services with an ethical, sustainable, and innovative approach."
+  },
   "CONTACT_FORM": {
     "HEADING": "Contact us if you have questions or comments about the topic, or <span class=\"text-[var(--color-title)]\">register</span> to receive more information about smart cities.",
     "NAME_PLACEHOLDER": "Name",
